syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.Subject";
option java_outer_classname = "SubjectImpl";

package qualityeducation;



// Subject service definition
service SubjectService {
  rpc MonitorSubjectPerformance(stream SubjectPerformance) returns (stream SubjectFeedback);
}

// Request message
message SubjectPerformance {
  string student_name = 1;
  string subject = 2;
  string quiz_name = 3;
  int32 subject_score = 4;
  
}

// Response message
message SubjectFeedback {
  string progress_tracking = 1;
  string resource_recommendation = 2;
  string personalized_tips = 3;
  string advisory = 4;
}